--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Spotify Embed</title>
+    
+    <style>
+      body {
+        font-family: arial, helvetica, san-serif;
+      }
+    </style>
   </head>
   <body>
     <h1>Spotify Embed</h1>
