--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h1>Spotify Embed</h1>
 
     <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <script src="index.js"></script>
   </body>
 </html>
